--- a/content/data/config.json
+++ b/content/data/config.json
@@ -24,7 +24,7 @@
             },
             {
                 "label": "lorem-ipsum",
-                "url": "#",
+                "url": "/faq",
                 "style": "link",
                 "has_icon": false,
                 "icon": "arrow-left",
